--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/humanresourcemngt
 spring.datasource.username=root
 spring.datasource.password=Qnet@123
-sample.property1=property1
+#sample.property1=property1
